@@ -108,7 +108,7 @@ public interface IWriteTransaction extends IReadTransaction {
    * already has a first child.
    */
   public long insertTextAsFirstChild(final String value);
-  
+
   /**
    * Insert new text node as first child of currently selected node.
    * The cursor is moved to the inserted node.
@@ -118,7 +118,7 @@ public interface IWriteTransaction extends IReadTransaction {
    * already has a first child.
    */
   public long insertTextAsFirstChild(final int value);
-  
+
   /**
    * Insert new text node as first child of currently selected node.
    * The cursor is moved to the inserted node.
@@ -128,6 +128,16 @@ public interface IWriteTransaction extends IReadTransaction {
    * already has a first child.
    */
   public long insertTextAsFirstChild(final long value);
+
+  /**
+   * Insert new text node as first child of currently selected node.
+   * The cursor is moved to the inserted node.
+   * 
+   * @param value Value of inserted node.
+   * @return Key of inserted node.
+   * already has a first child.
+   */
+  public long insertTextAsFirstChild(final boolean value);
 
   /**
    * Insert new fulltext node as first child of currently selected node.
@@ -158,7 +168,7 @@ public interface IWriteTransaction extends IReadTransaction {
    * Insert new element node as right sibling of currently selected node.
    * The cursor is moved to the inserted node.
    * 
-   * @param valueType Type of inserted value.
+   * @param valueType Type of value.
    * @param value Value of inserted node.
    * @return Key of inserted node.
    * the root node which is not allowed to have right siblings.
@@ -174,7 +184,7 @@ public interface IWriteTransaction extends IReadTransaction {
    * the root node which is not allowed to have right siblings.
    */
   public long insertTextAsRightSibling(final String value);
-  
+
   /**
    * Insert new element node as right sibling of currently selected node.
    * The cursor is moved to the inserted node.
@@ -184,7 +194,7 @@ public interface IWriteTransaction extends IReadTransaction {
    * the root node which is not allowed to have right siblings.
    */
   public long insertTextAsRightSibling(final int value);
-  
+
   /**
    * Insert new element node as right sibling of currently selected node.
    * The cursor is moved to the inserted node.
@@ -194,6 +204,16 @@ public interface IWriteTransaction extends IReadTransaction {
    * the root node which is not allowed to have right siblings.
    */
   public long insertTextAsRightSibling(final long value);
+
+  /**
+   * Insert new element node as right sibling of currently selected node.
+   * The cursor is moved to the inserted node.
+   * 
+   * @param value Value of inserted node.
+   * @return Key of inserted node.
+   * the root node which is not allowed to have right siblings.
+   */
+  public long insertTextAsRightSibling(final boolean value);
 
   /**
    * Insert new fulltext node as right sibling of currently selected node.
@@ -236,7 +256,7 @@ public interface IWriteTransaction extends IReadTransaction {
       final String uri,
       final String prefix,
       final String value);
-  
+
   /**
    * Insert attribute in currently selected node.
    * The cursor is moved to the inserted node.
@@ -251,7 +271,7 @@ public interface IWriteTransaction extends IReadTransaction {
       final String uri,
       final String prefix,
       final int value);
-  
+
   /**
    * Insert attribute in currently selected node.
    * The cursor is moved to the inserted node.
@@ -266,6 +286,21 @@ public interface IWriteTransaction extends IReadTransaction {
       final String uri,
       final String prefix,
       final long value);
+
+  /**
+   * Insert attribute in currently selected node.
+   * The cursor is moved to the inserted node.
+   * 
+   * @param localPart Local part of inserted node.
+   * @param uri URI of inserted node.
+   * @param prefix Prefix of inserted node.
+   * @param value Value of inserted node.
+   */
+  public void insertAttribute(
+      final String localPart,
+      final String uri,
+      final String prefix,
+      final boolean value);
 
   /**
    * Insert namespace declaration in currently selected node.
@@ -345,6 +380,34 @@ public interface IWriteTransaction extends IReadTransaction {
    * @param value New value of node.
    */
   public void setValue(final int valueType, final byte[] value);
+
+  /**
+   * Set value of node.
+   * 
+   * @param value New value of node.
+   */
+  public void setValue(final String value);
+
+  /**
+   * Set value of node.
+   * 
+   * @param value New value of node.
+   */
+  public void setValue(final int value);
+
+  /**
+   * Set value of node.
+   * 
+   * @param value New value of node.
+   */
+  public void setValue(final long value);
+
+  /**
+   * Set value of node.
+   * 
+   * @param value New value of node.
+   */
+  public void setValue(final boolean value);
 
   /**
    * Commit all modifications of the exclusive write transaction. Even commit
